--- a/west/kustomization.yml
+++ b/west/kustomization.yml
@@ -1,4 +1,10 @@
 bases:
-  - https://github.com/BuoyantIO/emojivoto/kustomize/deployment
-resources:
-  - split.yml
+- ../base
+
+# patchesJson6902:
+#   - path: fail_web_east.yml
+#     target:
+#       group: split.smi-spec.io
+#       version: v1alpha1
+#       kind: TrafficSplit
+#       name: web
