--- a/dev/kustomization.yml
+++ b/dev/kustomization.yml
@@ -26,3 +26,9 @@ patchesJson6902:
       version: v1
       kind: Deployment
       name: voting
+  - path: one_replica.yml
+    target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: vote-bot
