--- a/west/kustomization.yml
+++ b/west/kustomization.yml
@@ -2,9 +2,9 @@ bases:
 - ../base
 
 # patchesJson6902:
-#   - path: fail_web_east.yml
-#     target:
-#       group: split.smi-spec.io
-#       version: v1alpha1
-#       kind: TrafficSplit
-#       name: web
+#  - path: split_voting_east.yml
+#    target:
+#      group: split.smi-spec.io
+#      version: v1alpha1
+#      kind: TrafficSplit
+#      name: voting
