--- a/west/kustomization.yml
+++ b/west/kustomization.yml
@@ -1,10 +1,10 @@
 bases:
 - ../base
 
-patchesJson6902:
- - path: split_voting_east.yml
-   target:
-     group: split.smi-spec.io
-     version: v1alpha1
-     kind: TrafficSplit
-     name: voting
+#patchesJson6902:
+# - path: split_emoji_east.yml
+#   target:
+#     group: split.smi-spec.io
+#     version: v1alpha1
+#     kind: TrafficSplit
+#     name: emoji
