--- a/base/kustomization.yml
+++ b/base/kustomization.yml
@@ -17,12 +17,12 @@ patchesJson6902:
     version: v1
     name: vote-bot
   path: inject_linkerd.yml
-- target:
-    group: apps
-    version: v1
-    kind: Deployment
-    name: vote-bot
-  path: no_replicas.yml
+#- target:
+#    group: apps
+#    version: v1
+#    kind: Deployment
+#    name: vote-bot
+#  path: no_replicas.yml
 - target:
     group: apps
     kind: Deployment
