--- a/base/inject_linkerd.yml
+++ b/base/inject_linkerd.yml
@@ -1,5 +1,5 @@
 - op: add
-  path: /spec/template/metadata/annotations
+  path: /metadata/annotations
   value:
     linkerd.io/inject: enabled
-     
+
